--- a/C++Modern/001auto/001auto.vcxproj.filters
+++ b/C++Modern/001auto/001auto.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="001auto.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
